--- a/mediapipe/graphs/object_detection/BUILD
+++ b/mediapipe/graphs/object_detection/BUILD
@@ -71,6 +71,11 @@ cc_library(
         "//mediapipe/calculators/util:non_max_suppression_calculator",
         "//mediapipe/calculators/video:opencv_video_decoder_calculator",
         "//mediapipe/calculators/video:opencv_video_encoder_calculator",
+        # newly added to swap a different model
+        "//mediapipe/calculators/tensor:image_to_tensor_calculator",
+        "//mediapipe/calculators/tensor:inference_calculator",
+        "//mediapipe/calculators/tensor:tensors_to_detections_calculator",
+
     ],
 )
 
