--- a/mediapipe/graphs/tracking/BUILD
+++ b/mediapipe/graphs/tracking/BUILD
@@ -40,6 +40,7 @@ cc_library(
         "//mediapipe/graphs/tracking/subgraphs:renderer_cpu",
         # edits
         "//mediapipe/graphs/tracking/subgraphs:object_detection_cpu_new",
+        "//mediapipe/graphs/tracking/subgraphs:object_detection_fasterrcnn_cpu",
         "//mediapipe/calculators/video:opencv_video_decoder_calculator",
         "//mediapipe/calculators/video:opencv_video_encoder_calculator",
         "//mediapipe/calculators/core:packet_cloner_calculator",
